[tool.poetry]
name = "tokenmetry"
version = "0.1.0"
description = "Token telemetry system for CelestiaOrg repositories"
authors = ["CelestiaOrg"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tokenizers = "^0.21.0"
transformers = "^4.52.4"
gitpython = "^3.1.44"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
